--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Trex_ExamPortal?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=soumya@0210
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/Trex_ExamPortal?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=soumya@0210
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=6001
+spring.profiles.active=${ENV:dev}
 
-spring.jpa.database=mysql
-spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.mySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.database=mysql
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.mySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 
 #
