--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.profiles.active=${ENV:dev}
 
 
 spring.jpa.open-in-view=false
-
+logging.level.root=DEBUG
 # HikariCP Connection Pool Configuration
 spring.datasource.hikari.maximum-pool-size=40
 spring.task.scheduling.pool.size=20
